--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
     <div class="container">
         <div class="gif-container">
-            <img src="/media/hehe.gif" alt="Happy Valentines!!! (If you see this, hindi nag-l-load ung GIF HAHAHAHAHAHAHA)" style="width: 1000px;">
+            <img src="media/hehe.gif" alt="Happy Valentines!!! (If you see this, hindi nag-l-load ung GIF HAHAHAHAHAHAHA)" style="width: 1000px;">
         </div>
 
         <h1 id="question">Can you be my Valentine?</h1>
@@ -193,5 +193,4 @@
         });
     </script>
 </body>
-
 </html>
